Lab1/lab1-testsuite/lab1-test-dir#/Grammar/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.11 from Grammar/Par.y
-----------------------------------------------------------------------------

state 50 contains 7 shift/reduce conflicts.
state 136 contains 1 shift/reduce conflicts.
state 150 contains 1 shift/reduce conflicts.
state 180 contains 5 shift/reduce conflicts.
state 230 contains 31 reduce/reduce conflicts.
state 258 contains 1 shift/reduce conflicts.

rule 60 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListDef -> ListDef                         (1)
	%start_pDef -> Def                                 (2)
	%start_pListArg -> ListArg                         (3)
	%start_pListDecl -> ListDecl                       (4)
	%start_pListStm -> ListStm                         (5)
	%start_pStm -> Stm                                 (6)
	%start_pArg -> Arg                                 (7)
	%start_pDecl -> Decl                               (8)
	%start_pElse -> Else                               (9)
	%start_pExp15 -> Exp15                             (10)
	%start_pExp14 -> Exp14                             (11)
	%start_pExp13 -> Exp13                             (12)
	%start_pExp12 -> Exp12                             (13)
	%start_pExp11 -> Exp11                             (14)
	%start_pExp9 -> Exp9                               (15)
	%start_pExp8 -> Exp8                               (16)
	%start_pExp4 -> Exp4                               (17)
	%start_pExp3 -> Exp3                               (18)
	%start_pExp2 -> Exp2                               (19)
	%start_pExp -> Exp                                 (20)
	%start_pExp1 -> Exp1                               (21)
	%start_pExp5 -> Exp5                               (22)
	%start_pExp6 -> Exp6                               (23)
	%start_pExp7 -> Exp7                               (24)
	%start_pExp10 -> Exp10                             (25)
	%start_pExp16 -> Exp16                             (26)
	%start_pListExp -> ListExp                         (27)
	%start_pType -> Type                               (28)
	%start_pStringList -> StringList                   (29)
	%start_pListString -> ListString                   (30)
	Char -> L_charac                                   (31)
	Integer -> L_integ                                 (32)
	Double -> L_doubl                                  (33)
	String -> L_quoted                                 (34)
	Id -> L_Id                                         (35)
	Program -> ListDef                                 (36)
	ListDef ->                                         (37)
	ListDef -> Def ListDef                             (38)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (39)
	Def -> Type Id '(' ListArg ')' ';'                 (40)
	Def -> 'using' Exp ';'                             (41)
	Def -> Type Decl ';'                               (42)
	Def -> Type ListDecl ';'                           (43)
	Def -> 'typedef' Type Id ';'                       (44)
	ListArg ->                                         (45)
	ListArg -> Arg                                     (46)
	ListArg -> Arg ',' ListArg                         (47)
	ListDecl -> Decl                                   (48)
	ListDecl -> Decl ',' ListDecl                      (49)
	ListStm ->                                         (50)
	ListStm -> Stm ListStm                             (51)
	Stm -> 'typedef' Type Id ';'                       (52)
	Stm -> Type Decl ';'                               (53)
	Stm -> Type ListDecl ';'                           (54)
	Stm -> Type Id '=' Exp ';'                         (55)
	Stm -> Exp ';'                                     (56)
	Stm -> 'return' Exp ';'                            (57)
	Stm -> 'while' '(' Exp ')' Stm                     (58)
	Stm -> 'while' '(' Exp ')' ';'                     (59)
	Stm -> '{' ListStm '}'                             (60)
	Stm -> 'if' '(' Exp ')' Stm Else                   (61)
	Stm -> '{' ListStm '}'                             (62)
	Stm -> 'const' Type '&' Id '=' Exp ';'             (63)
	Stm -> 'for' '(' Type Id '=' Exp ';' Exp ';' Exp ')' Stm   (64)
	Stm -> 'const' Type Id '=' Exp ';'                 (65)
	Stm -> 'do' Stm 'while' '(' Exp ')' ';'            (66)
	Arg -> Type                                        (67)
	Arg -> Type Id                                     (68)
	Arg -> 'const' Type '&' Id                         (69)
	Arg -> Type '&' Id                                 (70)
	Arg -> 'const' Type '&'                            (71)
	Arg -> Type '&'                                    (72)
	Decl -> Id                                         (73)
	Else ->                                            (74)
	Else -> 'else' Stm                                 (75)
	Exp15 -> Char                                      (76)
	Exp15 -> Integer                                   (77)
	Exp15 -> Double                                    (78)
	Exp15 -> StringList                                (79)
	Exp15 -> 'true'                                    (80)
	Exp15 -> 'false'                                   (81)
	Exp15 -> Id                                        (82)
	Exp15 -> Exp15 '[' Exp ']'                         (83)
	Exp15 -> Exp15 '(' ListExp ')'                     (84)
	Exp15 -> Exp15 '.' Exp14                           (85)
	Exp15 -> '*' Exp15                                 (86)
	Exp15 -> Exp15 '<<' Exp14                          (87)
	Exp15 -> Exp15 '>>' Id                             (88)
	Exp15 -> Id '::' Exp16                             (89)
	Exp15 -> '\"' '\"'                                 (90)
	Exp15 -> Exp16                                     (91)
	Exp14 -> Exp15 '++'                                (92)
	Exp14 -> Exp15 '--'                                (93)
	Exp14 -> Exp15                                     (94)
	Exp13 -> '!' Exp14                                 (95)
	Exp13 -> '++' Exp14                                (96)
	Exp13 -> '--' Exp14                                (97)
	Exp13 -> '-' Exp14                                 (98)
	Exp13 -> Exp13 '->' Exp14                          (99)
	Exp13 -> Exp14                                     (100)
	Exp12 -> Exp12 '*' Exp13                           (101)
	Exp12 -> Exp12 '/' Exp13                           (102)
	Exp12 -> Exp12 '%' Exp13                           (103)
	Exp12 -> Exp13                                     (104)
	Exp11 -> Exp11 '+' Exp12                           (105)
	Exp11 -> Exp11 '-' Exp12                           (106)
	Exp11 -> Exp12                                     (107)
	Exp9 -> Exp9 '<' Exp10                             (108)
	Exp9 -> Exp9 '>' Exp10                             (109)
	Exp9 -> Exp9 '<=' Exp10                            (110)
	Exp9 -> Exp9 '>=' Exp10                            (111)
	Exp9 -> Exp10                                      (112)
	Exp8 -> Exp8 '==' Exp9                             (113)
	Exp8 -> Exp8 '!=' Exp9                             (114)
	Exp8 -> Exp9                                       (115)
	Exp4 -> Exp4 '&&' Exp5                             (116)
	Exp4 -> Exp5                                       (117)
	Exp3 -> Exp3 '||' Exp4                             (118)
	Exp3 -> Exp4                                       (119)
	Exp2 -> Exp3 '=' Exp2                              (120)
	Exp2 -> 'throw' Exp2                               (121)
	Exp2 -> Exp3 '?' Exp2 ':' Exp2                     (122)
	Exp2 -> Exp3                                       (123)
	Exp -> Exp1                                        (124)
	Exp1 -> Exp2                                       (125)
	Exp5 -> Exp6                                       (126)
	Exp6 -> Exp7                                       (127)
	Exp7 -> Exp8                                       (128)
	Exp10 -> Exp11                                     (129)
	Exp16 -> '(' Exp ')'                               (130)
	ListExp ->                                         (131)
	ListExp -> Exp                                     (132)
	ListExp -> Exp ',' ListExp                         (133)
	Type -> 'bool'                                     (134)
	Type -> 'double'                                   (135)
	Type -> 'int'                                      (136)
	Type -> 'string'                                   (137)
	Type -> 'void'                                     (138)
	Type -> Id                                         (139)
	Type -> Id '::' Type                               (140)
	StringList -> ListString                           (141)
	ListString -> String                               (142)
	ListString -> String ListString                    (143)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'\"'           { PT _ (TS _ 3) }
	'%'            { PT _ (TS _ 4) }
	'&'            { PT _ (TS _ 5) }
	'&&'           { PT _ (TS _ 6) }
	'('            { PT _ (TS _ 7) }
	')'            { PT _ (TS _ 8) }
	'*'            { PT _ (TS _ 9) }
	'+'            { PT _ (TS _ 10) }
	'++'           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'->'           { PT _ (TS _ 15) }
	'.'            { PT _ (TS _ 16) }
	'/'            { PT _ (TS _ 17) }
	':'            { PT _ (TS _ 18) }
	'::'           { PT _ (TS _ 19) }
	';'            { PT _ (TS _ 20) }
	'<'            { PT _ (TS _ 21) }
	'<<'           { PT _ (TS _ 22) }
	'<='           { PT _ (TS _ 23) }
	'='            { PT _ (TS _ 24) }
	'=='           { PT _ (TS _ 25) }
	'>'            { PT _ (TS _ 26) }
	'>='           { PT _ (TS _ 27) }
	'>>'           { PT _ (TS _ 28) }
	'?'            { PT _ (TS _ 29) }
	'['            { PT _ (TS _ 30) }
	']'            { PT _ (TS _ 31) }
	'bool'         { PT _ (TS _ 32) }
	'const'        { PT _ (TS _ 33) }
	'do'           { PT _ (TS _ 34) }
	'double'       { PT _ (TS _ 35) }
	'else'         { PT _ (TS _ 36) }
	'false'        { PT _ (TS _ 37) }
	'for'          { PT _ (TS _ 38) }
	'if'           { PT _ (TS _ 39) }
	'int'          { PT _ (TS _ 40) }
	'return'       { PT _ (TS _ 41) }
	'string'       { PT _ (TS _ 42) }
	'throw'        { PT _ (TS _ 43) }
	'true'         { PT _ (TS _ 44) }
	'typedef'      { PT _ (TS _ 45) }
	'using'        { PT _ (TS _ 46) }
	'void'         { PT _ (TS _ 47) }
	'while'        { PT _ (TS _ 48) }
	'{'            { PT _ (TS _ 49) }
	'||'           { PT _ (TS _ 50) }
	'}'            { PT _ (TS _ 51) }
	L_charac       { PT _ (TC $$) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListDef rule  1
	%start_pDef     rule  2
	%start_pListArg rule  3
	%start_pListDecl rule  4
	%start_pListStm rule  5
	%start_pStm     rule  6
	%start_pArg     rule  7
	%start_pDecl    rule  8
	%start_pElse    rule  9
	%start_pExp15   rule  10
	%start_pExp14   rule  11
	%start_pExp13   rule  12
	%start_pExp12   rule  13
	%start_pExp11   rule  14
	%start_pExp9    rule  15
	%start_pExp8    rule  16
	%start_pExp4    rule  17
	%start_pExp3    rule  18
	%start_pExp2    rule  19
	%start_pExp     rule  20
	%start_pExp1    rule  21
	%start_pExp5    rule  22
	%start_pExp6    rule  23
	%start_pExp7    rule  24
	%start_pExp10   rule  25
	%start_pExp16   rule  26
	%start_pListExp rule  27
	%start_pType    rule  28
	%start_pStringList rule  29
	%start_pListString rule  30
	Char            rule  31
	Integer         rule  32
	Double          rule  33
	String          rule  34
	Id              rule  35
	Program         rule  36
	ListDef         rules 37, 38
	Def             rules 39, 40, 41, 42, 43, 44
	ListArg         rules 45, 46, 47
	ListDecl        rules 48, 49
	ListStm         rules 50, 51
	Stm             rules 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66
	Arg             rules 67, 68, 69, 70, 71, 72
	Decl            rule  73
	Else            rules 74, 75
	Exp15           rules 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91
	Exp14           rules 92, 93, 94
	Exp13           rules 95, 96, 97, 98, 99, 100
	Exp12           rules 101, 102, 103, 104
	Exp11           rules 105, 106, 107
	Exp9            rules 108, 109, 110, 111, 112
	Exp8            rules 113, 114, 115
	Exp4            rules 116, 117
	Exp3            rules 118, 119
	Exp2            rules 120, 121, 122, 123
	Exp             rule  124
	Exp1            rule  125
	Exp5            rule  126
	Exp6            rule  127
	Exp7            rule  128
	Exp10           rule  129
	Exp16           rule  130
	ListExp         rules 131, 132, 133
	Type            rules 134, 135, 136, 137, 138, 139, 140
	StringList      rule  141
	ListString      rules 142, 143

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         shift, and enter state 40
	'double'       shift, and enter state 41
	'int'          shift, and enter state 42
	'string'       shift, and enter state 43
	'typedef'      shift, and enter state 125
	'using'        shift, and enter state 126
	'void'         shift, and enter state 44
	L_Id           shift, and enter state 45
	%eof           reduce using rule 37

	Id             goto state 38
	Program        goto state 129
	ListDef        goto state 130
	Def            goto state 128
	Type           goto state 124

State 1


	'bool'         shift, and enter state 40
	'double'       shift, and enter state 41
	'int'          shift, and enter state 42
	'string'       shift, and enter state 43
	'typedef'      shift, and enter state 125
	'using'        shift, and enter state 126
	'void'         shift, and enter state 44
	L_Id           shift, and enter state 45
	%eof           reduce using rule 37

	Id             goto state 38
	ListDef        goto state 127
	Def            goto state 128
	Type           goto state 124

State 2


	'bool'         shift, and enter state 40
	'double'       shift, and enter state 41
	'int'          shift, and enter state 42
	'string'       shift, and enter state 43
	'typedef'      shift, and enter state 125
	'using'        shift, and enter state 126
	'void'         shift, and enter state 44
	L_Id           shift, and enter state 45

	Id             goto state 38
	Def            goto state 123
	Type           goto state 124

State 3


	'bool'         shift, and enter state 40
	'const'        shift, and enter state 104
	'double'       shift, and enter state 41
	'int'          shift, and enter state 42
	'string'       shift, and enter state 43
	'void'         shift, and enter state 44
	L_Id           shift, and enter state 45
	%eof           reduce using rule 45

	Id             goto state 38
	ListArg        goto state 121
	Arg            goto state 122
	Type           goto state 103

State 4


	L_Id           shift, and enter state 45

	Id             goto state 100
	ListDecl       goto state 119
	Decl           goto state 120

State 5


	'!'            shift, and enter state 69
	'\"'           shift, and enter state 70
	'('            shift, and enter state 71
	'*'            shift, and enter state 72
	'++'           shift, and enter state 73
	'-'            shift, and enter state 74
	'--'           shift, and enter state 75
	'bool'         shift, and enter state 40
	'const'        shift, and enter state 109
	'do'           shift, and enter state 110
	'double'       shift, and enter state 41
	'false'        shift, and enter state 76
	'for'          shift, and enter state 111
	'if'           shift, and enter state 112
	'int'          shift, and enter state 42
	'return'       shift, and enter state 113
	'string'       shift, and enter state 43
	'throw'        shift, and enter state 77
	'true'         shift, and enter state 78
	'typedef'      shift, and enter state 114
	'void'         shift, and enter state 44
	'while'        shift, and enter state 115
	'{'            shift, and enter state 116
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 79
	L_doubl        shift, and enter state 80
	L_quoted       shift, and enter state 35
	L_Id           shift, and enter state 45
	%eof           reduce using rule 50

	Char           goto state 46
	Integer        goto state 47
	Double         goto state 48
	String         goto state 33
	Id             goto state 105
	ListStm        goto state 117
	Stm            goto state 118
	Exp15          goto state 50
	Exp14          goto state 51
	Exp13          goto state 52
	Exp12          goto state 53
	Exp11          goto state 54
	Exp9           goto state 55
	Exp8           goto state 56
	Exp4           goto state 57
	Exp3           goto state 58
	Exp2           goto state 59
	Exp            goto state 107
	Exp1           goto state 61
	Exp5           goto state 62
	Exp6           goto state 63
	Exp7           goto state 64
	Exp10          goto state 65
	Exp16          goto state 66
	Type           goto state 108
	StringList     goto state 68
	ListString     goto state 37

State 6


	'!'            shift, and enter state 69
	'\"'           shift, and enter state 70
	'('            shift, and enter state 71
	'*'            shift, and enter state 72
	'++'           shift, and enter state 73
	'-'            shift, and enter state 74
	'--'           shift, and enter state 75
	'bool'         shift, and enter state 40
	'const'        shift, and enter state 109
	'do'           shift, and enter state 110
	'double'       shift, and enter state 41
	'false'        shift, and enter state 76
	'for'          shift, and enter state 111
	'if'           shift, and enter state 112
	'int'          shift, and enter state 42
	'return'       shift, and enter state 113
	'string'       shift, and enter state 43
	'throw'        shift, and enter state 77
	'true'         shift, and enter state 78
	'typedef'      shift, and enter state 114
	'void'         shift, and enter state 44
	'while'        shift, and enter state 115
	'{'            shift, and enter state 116
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 79
	L_doubl        shift, and enter state 80
	L_quoted       shift, and enter state 35
	L_Id           shift, and enter state 45

	Char           goto state 46
	Integer        goto state 47
	Double         goto state 48
	String         goto state 33
	Id             goto state 105
	Stm            goto state 106
	Exp15          goto state 50
	Exp14          goto state 51
	Exp13          goto state 52
	Exp12          goto state 53
	Exp11          goto state 54
	Exp9           goto state 55
	Exp8           goto state 56
	Exp4           goto state 57
	Exp3           goto state 58
	Exp2           goto state 59
	Exp            goto state 107
	Exp1           goto state 61
	Exp5           goto state 62
	Exp6           goto state 63
	Exp7           goto state 64
	Exp10          goto state 65
	Exp16          goto state 66
	Type           goto state 108
	StringList     goto state 68
	ListString     goto state 37

State 7


	'bool'         shift, and enter state 40
	'const'        shift, and enter state 104
	'double'       shift, and enter state 41
	'int'          shift, and enter state 42
	'string'       shift, and enter state 43
	'void'         shift, and enter state 44
	L_Id           shift, and enter state 45

	Id             goto state 38
	Arg            goto state 102
	Type           goto state 103

State 8


	L_Id           shift, and enter state 45

	Id             goto state 100
	Decl           goto state 101

State 9


	'else'         shift, and enter state 99
	%eof           reduce using rule 74

	Else           goto state 98

State 10


	'\"'           shift, and enter state 70
	'('            shift, and enter state 71
	'*'            shift, and enter state 72
	'false'        shift, and enter state 76
	'true'         shift, and enter state 78
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 79
	L_doubl        shift, and enter state 80
	L_quoted       shift, and enter state 35
	L_Id           shift, and enter state 45

	Char           goto state 46
	Integer        goto state 47
	Double         goto state 48
	String         goto state 33
	Id             goto state 49
	Exp15          goto state 97
	Exp16          goto state 66
	StringList     goto state 68
	ListString     goto state 37

State 11


	'\"'           shift, and enter state 70
	'('            shift, and enter state 71
	'*'            shift, and enter state 72
	'false'        shift, and enter state 76
	'true'         shift, and enter state 78
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 79
	L_doubl        shift, and enter state 80
	L_quoted       shift, and enter state 35
	L_Id           shift, and enter state 45

	Char           goto state 46
	Integer        goto state 47
	Double         goto state 48
	String         goto state 33
	Id             goto state 49
	Exp15          goto state 50
	Exp14          goto state 96
	Exp16          goto state 66
	StringList     goto state 68
	ListString     goto state 37

State 12


	'!'            shift, and enter state 69
	'\"'           shift, and enter state 70
	'('            shift, and enter state 71
	'*'            shift, and enter state 72
	'++'           shift, and enter state 73
	'-'            shift, and enter state 74
	'--'           shift, and enter state 75
	'false'        shift, and enter state 76
	'true'         shift, and enter state 78
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 79
	L_doubl        shift, and enter state 80
	L_quoted       shift, and enter state 35
	L_Id           shift, and enter state 45

	Char           goto state 46
	Integer        goto state 47
	Double         goto state 48
	String         goto state 33
	Id             goto state 49
	Exp15          goto state 50
	Exp14          goto state 51
	Exp13          goto state 95
	Exp16          goto state 66
	StringList     goto state 68
	ListString     goto state 37

State 13


	'!'            shift, and enter state 69
	'\"'           shift, and enter state 70
	'('            shift, and enter state 71
	'*'            shift, and enter state 72
	'++'           shift, and enter state 73
	'-'            shift, and enter state 74
	'--'           shift, and enter state 75
	'false'        shift, and enter state 76
	'true'         shift, and enter state 78
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 79
	L_doubl        shift, and enter state 80
	L_quoted       shift, and enter state 35
	L_Id           shift, and enter state 45

	Char           goto state 46
	Integer        goto state 47
	Double         goto state 48
	String         goto state 33
	Id             goto state 49
	Exp15          goto state 50
	Exp14          goto state 51
	Exp13          goto state 52
	Exp12          goto state 94
	Exp16          goto state 66
	StringList     goto state 68
	ListString     goto state 37

State 14


	'!'            shift, and enter state 69
	'\"'           shift, and enter state 70
	'('            shift, and enter state 71
	'*'            shift, and enter state 72
	'++'           shift, and enter state 73
	'-'            shift, and enter state 74
	'--'           shift, and enter state 75
	'false'        shift, and enter state 76
	'true'         shift, and enter state 78
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 79
	L_doubl        shift, and enter state 80
	L_quoted       shift, and enter state 35
	L_Id           shift, and enter state 45

	Char           goto state 46
	Integer        goto state 47
	Double         goto state 48
	String         goto state 33
	Id             goto state 49
	Exp15          goto state 50
	Exp14          goto state 51
	Exp13          goto state 52
	Exp12          goto state 53
	Exp11          goto state 93
	Exp16          goto state 66
	StringList     goto state 68
	ListString     goto state 37

State 15


	'!'            shift, and enter state 69
	'\"'           shift, and enter state 70
	'('            shift, and enter state 71
	'*'            shift, and enter state 72
	'++'           shift, and enter state 73
	'-'            shift, and enter state 74
	'--'           shift, and enter state 75
	'false'        shift, and enter state 76
	'true'         shift, and enter state 78
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 79
	L_doubl        shift, and enter state 80
	L_quoted       shift, and enter state 35
	L_Id           shift, and enter state 45

	Char           goto state 46
	Integer        goto state 47
	Double         goto state 48
	String         goto state 33
	Id             goto state 49
	Exp15          goto state 50
	Exp14          goto state 51
	Exp13          goto state 52
	Exp12          goto state 53
	Exp11          goto state 54
	Exp9           goto state 92
	Exp10          goto state 65
	Exp16          goto state 66
	StringList     goto state 68
	ListString     goto state 37

State 16


	'!'            shift, and enter state 69
	'\"'           shift, and enter state 70
	'('            shift, and enter state 71
	'*'            shift, and enter state 72
	'++'           shift, and enter state 73
	'-'            shift, and enter state 74
	'--'           shift, and enter state 75
	'false'        shift, and enter state 76
	'true'         shift, and enter state 78
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 79
	L_doubl        shift, and enter state 80
	L_quoted       shift, and enter state 35
	L_Id           shift, and enter state 45

	Char           goto state 46
	Integer        goto state 47
	Double         goto state 48
	String         goto state 33
	Id             goto state 49
	Exp15          goto state 50
	Exp14          goto state 51
	Exp13          goto state 52
	Exp12          goto state 53
	Exp11          goto state 54
	Exp9           goto state 55
	Exp8           goto state 91
	Exp10          goto state 65
	Exp16          goto state 66
	StringList     goto state 68
	ListString     goto state 37

State 17


	'!'            shift, and enter state 69
	'\"'           shift, and enter state 70
	'('            shift, and enter state 71
	'*'            shift, and enter state 72
	'++'           shift, and enter state 73
	'-'            shift, and enter state 74
	'--'           shift, and enter state 75
	'false'        shift, and enter state 76
	'true'         shift, and enter state 78
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 79
	L_doubl        shift, and enter state 80
	L_quoted       shift, and enter state 35
	L_Id           shift, and enter state 45

	Char           goto state 46
	Integer        goto state 47
	Double         goto state 48
	String         goto state 33
	Id             goto state 49
	Exp15          goto state 50
	Exp14          goto state 51
	Exp13          goto state 52
	Exp12          goto state 53
	Exp11          goto state 54
	Exp9           goto state 55
	Exp8           goto state 56
	Exp4           goto state 90
	Exp5           goto state 62
	Exp6           goto state 63
	Exp7           goto state 64
	Exp10          goto state 65
	Exp16          goto state 66
	StringList     goto state 68
	ListString     goto state 37

State 18


	'!'            shift, and enter state 69
	'\"'           shift, and enter state 70
	'('            shift, and enter state 71
	'*'            shift, and enter state 72
	'++'           shift, and enter state 73
	'-'            shift, and enter state 74
	'--'           shift, and enter state 75
	'false'        shift, and enter state 76
	'true'         shift, and enter state 78
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 79
	L_doubl        shift, and enter state 80
	L_quoted       shift, and enter state 35
	L_Id           shift, and enter state 45

	Char           goto state 46
	Integer        goto state 47
	Double         goto state 48
	String         goto state 33
	Id             goto state 49
	Exp15          goto state 50
	Exp14          goto state 51
	Exp13          goto state 52
	Exp12          goto state 53
	Exp11          goto state 54
	Exp9           goto state 55
	Exp8           goto state 56
	Exp4           goto state 57
	Exp3           goto state 89
	Exp5           goto state 62
	Exp6           goto state 63
	Exp7           goto state 64
	Exp10          goto state 65
	Exp16          goto state 66
	StringList     goto state 68
	ListString     goto state 37

State 19


	'!'            shift, and enter state 69
	'\"'           shift, and enter state 70
	'('            shift, and enter state 71
	'*'            shift, and enter state 72
	'++'           shift, and enter state 73
	'-'            shift, and enter state 74
	'--'           shift, and enter state 75
	'false'        shift, and enter state 76
	'throw'        shift, and enter state 77
	'true'         shift, and enter state 78
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 79
	L_doubl        shift, and enter state 80
	L_quoted       shift, and enter state 35
	L_Id           shift, and enter state 45

	Char           goto state 46
	Integer        goto state 47
	Double         goto state 48
	String         goto state 33
	Id             goto state 49
	Exp15          goto state 50
	Exp14          goto state 51
	Exp13          goto state 52
	Exp12          goto state 53
	Exp11          goto state 54
	Exp9           goto state 55
	Exp8           goto state 56
	Exp4           goto state 57
	Exp3           goto state 58
	Exp2           goto state 88
	Exp5           goto state 62
	Exp6           goto state 63
	Exp7           goto state 64
	Exp10          goto state 65
	Exp16          goto state 66
	StringList     goto state 68
	ListString     goto state 37

State 20


	'!'            shift, and enter state 69
	'\"'           shift, and enter state 70
	'('            shift, and enter state 71
	'*'            shift, and enter state 72
	'++'           shift, and enter state 73
	'-'            shift, and enter state 74
	'--'           shift, and enter state 75
	'false'        shift, and enter state 76
	'throw'        shift, and enter state 77
	'true'         shift, and enter state 78
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 79
	L_doubl        shift, and enter state 80
	L_quoted       shift, and enter state 35
	L_Id           shift, and enter state 45

	Char           goto state 46
	Integer        goto state 47
	Double         goto state 48
	String         goto state 33
	Id             goto state 49
	Exp15          goto state 50
	Exp14          goto state 51
	Exp13          goto state 52
	Exp12          goto state 53
	Exp11          goto state 54
	Exp9           goto state 55
	Exp8           goto state 56
	Exp4           goto state 57
	Exp3           goto state 58
	Exp2           goto state 59
	Exp            goto state 87
	Exp1           goto state 61
	Exp5           goto state 62
	Exp6           goto state 63
	Exp7           goto state 64
	Exp10          goto state 65
	Exp16          goto state 66
	StringList     goto state 68
	ListString     goto state 37

State 21


	'!'            shift, and enter state 69
	'\"'           shift, and enter state 70
	'('            shift, and enter state 71
	'*'            shift, and enter state 72
	'++'           shift, and enter state 73
	'-'            shift, and enter state 74
	'--'           shift, and enter state 75
	'false'        shift, and enter state 76
	'throw'        shift, and enter state 77
	'true'         shift, and enter state 78
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 79
	L_doubl        shift, and enter state 80
	L_quoted       shift, and enter state 35
	L_Id           shift, and enter state 45

	Char           goto state 46
	Integer        goto state 47
	Double         goto state 48
	String         goto state 33
	Id             goto state 49
	Exp15          goto state 50
	Exp14          goto state 51
	Exp13          goto state 52
	Exp12          goto state 53
	Exp11          goto state 54
	Exp9           goto state 55
	Exp8           goto state 56
	Exp4           goto state 57
	Exp3           goto state 58
	Exp2           goto state 59
	Exp1           goto state 86
	Exp5           goto state 62
	Exp6           goto state 63
	Exp7           goto state 64
	Exp10          goto state 65
	Exp16          goto state 66
	StringList     goto state 68
	ListString     goto state 37

State 22


	'!'            shift, and enter state 69
	'\"'           shift, and enter state 70
	'('            shift, and enter state 71
	'*'            shift, and enter state 72
	'++'           shift, and enter state 73
	'-'            shift, and enter state 74
	'--'           shift, and enter state 75
	'false'        shift, and enter state 76
	'true'         shift, and enter state 78
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 79
	L_doubl        shift, and enter state 80
	L_quoted       shift, and enter state 35
	L_Id           shift, and enter state 45

	Char           goto state 46
	Integer        goto state 47
	Double         goto state 48
	String         goto state 33
	Id             goto state 49
	Exp15          goto state 50
	Exp14          goto state 51
	Exp13          goto state 52
	Exp12          goto state 53
	Exp11          goto state 54
	Exp9           goto state 55
	Exp8           goto state 56
	Exp5           goto state 85
	Exp6           goto state 63
	Exp7           goto state 64
	Exp10          goto state 65
	Exp16          goto state 66
	StringList     goto state 68
	ListString     goto state 37

State 23


	'!'            shift, and enter state 69
	'\"'           shift, and enter state 70
	'('            shift, and enter state 71
	'*'            shift, and enter state 72
	'++'           shift, and enter state 73
	'-'            shift, and enter state 74
	'--'           shift, and enter state 75
	'false'        shift, and enter state 76
	'true'         shift, and enter state 78
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 79
	L_doubl        shift, and enter state 80
	L_quoted       shift, and enter state 35
	L_Id           shift, and enter state 45

	Char           goto state 46
	Integer        goto state 47
	Double         goto state 48
	String         goto state 33
	Id             goto state 49
	Exp15          goto state 50
	Exp14          goto state 51
	Exp13          goto state 52
	Exp12          goto state 53
	Exp11          goto state 54
	Exp9           goto state 55
	Exp8           goto state 56
	Exp6           goto state 84
	Exp7           goto state 64
	Exp10          goto state 65
	Exp16          goto state 66
	StringList     goto state 68
	ListString     goto state 37

State 24


	'!'            shift, and enter state 69
	'\"'           shift, and enter state 70
	'('            shift, and enter state 71
	'*'            shift, and enter state 72
	'++'           shift, and enter state 73
	'-'            shift, and enter state 74
	'--'           shift, and enter state 75
	'false'        shift, and enter state 76
	'true'         shift, and enter state 78
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 79
	L_doubl        shift, and enter state 80
	L_quoted       shift, and enter state 35
	L_Id           shift, and enter state 45

	Char           goto state 46
	Integer        goto state 47
	Double         goto state 48
	String         goto state 33
	Id             goto state 49
	Exp15          goto state 50
	Exp14          goto state 51
	Exp13          goto state 52
	Exp12          goto state 53
	Exp11          goto state 54
	Exp9           goto state 55
	Exp8           goto state 56
	Exp7           goto state 83
	Exp10          goto state 65
	Exp16          goto state 66
	StringList     goto state 68
	ListString     goto state 37

State 25


	'!'            shift, and enter state 69
	'\"'           shift, and enter state 70
	'('            shift, and enter state 71
	'*'            shift, and enter state 72
	'++'           shift, and enter state 73
	'-'            shift, and enter state 74
	'--'           shift, and enter state 75
	'false'        shift, and enter state 76
	'true'         shift, and enter state 78
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 79
	L_doubl        shift, and enter state 80
	L_quoted       shift, and enter state 35
	L_Id           shift, and enter state 45

	Char           goto state 46
	Integer        goto state 47
	Double         goto state 48
	String         goto state 33
	Id             goto state 49
	Exp15          goto state 50
	Exp14          goto state 51
	Exp13          goto state 52
	Exp12          goto state 53
	Exp11          goto state 54
	Exp10          goto state 82
	Exp16          goto state 66
	StringList     goto state 68
	ListString     goto state 37

State 26


	'('            shift, and enter state 71

	Exp16          goto state 81

State 27


	'!'            shift, and enter state 69
	'\"'           shift, and enter state 70
	'('            shift, and enter state 71
	'*'            shift, and enter state 72
	'++'           shift, and enter state 73
	'-'            shift, and enter state 74
	'--'           shift, and enter state 75
	'false'        shift, and enter state 76
	'throw'        shift, and enter state 77
	'true'         shift, and enter state 78
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 79
	L_doubl        shift, and enter state 80
	L_quoted       shift, and enter state 35
	L_Id           shift, and enter state 45
	%eof           reduce using rule 131
